# arrmate

./: .gitignore  Cargo.toml  Dockerfile  SonarrAPIV3.json  rustfmt.toml
.github/workflows/: builder.yaml
src/: apis.rs  config.rs  main.rs  radarr_api.rs  sonarr_api.rs  tasks.rs
src/apis/: qbittorrent.rs  radarr.rs  sonarr.rs  types.rs
src/tasks/: cleanup.rs  retry.rs
