[package]
name = "arrmate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
edolib = { git = "https://github.com/edoren/edolib-rs.git" }
log = "0.4"
notify = "8.2.0"
qbit-rs = { git = "https://github.com/edoren/qbit", branch = "torrent_content_piece_range_fix" }
radarr = { path = "./openapi_generated/radarr", features = ["bon"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sonarr = { path = "./openapi_generated/sonarr", features = ["bon"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
