[package]
name = "arrmate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
croner = "3"
edolib = { git = "https://github.com/edoren/edolib-rs.git" }
humantime = "2.3"
humantime-serde = "1.1"
log = "0.4"
notify = "8.2.0"
qbit-rs = "0.5"
radarr = { path = "./openapi_generated/radarr", features = ["bon"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sonarr = { path = "./openapi_generated/sonarr", features = ["bon"] }
thiserror = "2.0.18"
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
